[gd_scene load_steps=15 format=3 uid="uid://dayinmn5nhvfu"]

[ext_resource type="Texture2D" uid="uid://ch0pykcgrjvp5" path="res://weapon_throwable/molotov/molotov_20.png" id="1_3u1v3"]
[ext_resource type="Script" uid="uid://dpyo3sg80yygp" path="res://weapon_throwable/molotov/molotov.gd" id="1_07jq4"]
[ext_resource type="Texture2D" uid="uid://dugpskchlqbhk" path="res://weapon_throwable/molotov/molotov_12.png" id="14_xi3ju"]
[ext_resource type="Texture2D" uid="uid://61rmi5su1qbj" path="res://weapon_throwable/molotov/molotov_13.png" id="15_rrtbm"]
[ext_resource type="Texture2D" uid="uid://rd4br0ebkqj4" path="res://weapon_throwable/molotov/molotov_14.png" id="16_w5aj3"]
[ext_resource type="Texture2D" uid="uid://613csmm5jblk" path="res://weapon_throwable/molotov/molotov_15.png" id="17_eboka"]
[ext_resource type="Texture2D" uid="uid://dre4hnan40jc7" path="res://weapon_throwable/molotov/molotov_16.png" id="18_poxdr"]
[ext_resource type="Texture2D" uid="uid://c8ksjxk7wmhr6" path="res://weapon_throwable/molotov/molotov_17.png" id="19_nsafj"]
[ext_resource type="Texture2D" uid="uid://yeg6d3ynpdax" path="res://weapon_throwable/molotov/molotov_18.png" id="20_tw7pu"]
[ext_resource type="Texture2D" uid="uid://dpyddfd7wggr1" path="res://weapon_throwable/molotov/molotov_19.png" id="21_cbcs3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nwix6"]
radius = 26.0

[sub_resource type="Animation" id="Animation_tjood"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../fire_12:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../fire_13:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../fire_14:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../fire_15:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../fire_16:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../fire_17:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../fire_18:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5ybnp"]
resource_name = "fire_explosion"
length = 3.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../fire_12:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.09, 0.34),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../fire_13:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.26, 0.53),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../fire_14:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.43, 0.82),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../fire_15:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.66, 1.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../fire_16:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.88, 1.26, 1.48, 2.05, 2.44, 2.87),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../fire_17:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.11, 1.54, 1.9, 2.31, 2.71, 3.17),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../fire_18:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.48, 1.95, 2.21, 2.74, 3, 3.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.82, 2.35, 2.61, 3.11, 3.31, 3.51),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etgwo"]
_data = {
&"RESET": SubResource("Animation_tjood"),
&"fire_explosion": SubResource("Animation_5ybnp")
}

[node name="molotov" type="Area2D"]
position = Vector2(11, -11)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_07jq4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-11, 13)
texture = ExtResource("1_3u1v3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 11)
shape = SubResource("CircleShape2D_nwix6")

[node name="Timer" type="Timer" parent="."]

[node name="damage_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="fire_12" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, 12)
texture = ExtResource("14_xi3ju")

[node name="fire_13" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, 16)
texture = ExtResource("15_rrtbm")

[node name="fire_14" type="Sprite2D" parent="."]
visible = false
position = Vector2(-7.5, 16)
scale = Vector2(1.39063, 1)
texture = ExtResource("16_w5aj3")

[node name="fire_15" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, 14)
scale = Vector2(1.5625, 0.84375)
texture = ExtResource("17_eboka")

[node name="fire_16" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10, 11)
scale = Vector2(1.1875, 1)
texture = ExtResource("18_poxdr")

[node name="fire_17" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10, 11)
scale = Vector2(1.28125, 1)
texture = ExtResource("19_nsafj")

[node name="fire_18" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, 11)
texture = ExtResource("20_tw7pu")

[node name="fire_19" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, 11)
texture = ExtResource("21_cbcs3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../fire_19")
libraries = {
&"": SubResource("AnimationLibrary_etgwo")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
